objects/Customer__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Externalid__c</fullName>
        <externalId>true</externalId>
        <label>Customer_Externalid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone_No__c</fullName>
        <label>Phone No</label>
        <type>Phone</type>
    </fields>
    <label>Customer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customers</pluralLabel>
    <recordTypes>
        <fullName>Test_Record_Label</fullName>
        <active>true</active>
        <label>Test Record Label</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>